# fastreg

./: CMakeLists.txt  LICENSE.md  README.md  params.ini  setup.sh
cmake/: Utils.cmake
include/: core.hpp  fastreg.hpp  internal.hpp  params.hpp  precomp.hpp  safe_call.hpp  solver.hpp  types.hpp
include/cuda/: cuda_utils.hpp  device.hpp  device_memory.hpp  kernel_containers.hpp  reductor.hpp  scalar_fields.hpp  vector_fields.hpp  volume.hpp
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  demo.cpp
src/fastreg/: CMakeLists.txt  core.cpp  device_memory.cpp  fastreg.cpp  precomp.cpp  reductor.cpp  scalar_fields.cpp  solver.cpp  vector_fields.cpp  volume.cpp
src/fastreg/cuda/: reductor.cu  scalar_fields.cu  solver.cu  vector_fields.cu  volume.cu
